Clean up project structure and update configurations

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,4 +1,7 @@
 {
   "requiredTests": ["lint", "test", "build"],
-  "enforceHooks": true
+  "enforceHooks": {
+    "pre-commit": true,
+    "pre-push": true
+  }
 }
