--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -15,10 +15,24 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "../src",
+    "baseUrl": "..",
     "paths": {
-      "@/*": ["*"]
-    }
+      "@/*": ["src/*"],
+      "@modules/*": ["modules/*"],
+      "@tata-ai/*": ["modules/tata-ai/*"],
+      "@platforms/*": ["platforms/*"],
+      "@core/*": ["core/*"],
+      "@shared/*": ["shared/*"]
+    },
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
-  "include": ["../src"]
+  "include": [
+    "../src",
+    "../modules",
+    "../platforms",
+    "../core",
+    "../shared",
+    "../tests"
+  ]
 }
